fixed spacing

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -26,7 +26,7 @@
   text-align: center;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: start;
 }
 
 .form-parent{
